force-app/main/default/objects/FoxRoach_Office__c/FoxRoach_Office__c.object-meta.xml
<CustomObject>
    <label>FoxRoach Office</label>
    <nameField>
        <label>FoxRoach Office Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FoxRoach Offices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>