force-app/main/default/objects/FoxRoach_Office__c/fields/FranchiseCode__c.field-meta.xml
<CustomField>
    <fullName>FranchiseCode__c</fullName>
    <label>FranchiseCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>