force-app/main/default/objects/FoxRoach_Office__c/fields/Office_Id__c.field-meta.xml
<CustomField>
    <fullName>Office_Id__c</fullName>
    <externalId>true</externalId>
    <label>Office Id</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>