force-app/main/default/objects/FoxRoach_Office__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>