force-app/main/default/objects/FoxRoach_Office__c/fields/Sync_Type__c.field-meta.xml
<CustomField>
    <fullName>Sync_Type__c</fullName>
    <label>Sync Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Not in Bright</fullName>
                <default>true</default>
                <label>Not in Bright</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>